More youtube scrolling on ios fix

--- a/src/App.scss
+++ b/src/App.scss
@@ -207,7 +207,3 @@ h1 {
     width: 100%;
   }
 }
-
-* {
-  -webkit-overflow-scrolling: touch;
-}
